			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02g: *********************************

************************* Version 8.02f: *********************************

BUG: (02/02/05, SMR) Verilog output writes indexed signal names wrong (Bug #189).
FIX: In Verilog.getSafeNetName() distinguish busses from plain signals and handle them properly.

BUG: (02/02/05, SMR) Verilog output writes indexed signal names wrong (Bug #188).
FIX: In Verilog.getSafeNetName() allow square brackets if they enclose a singly indexed number.

IMP: (02/02/05, SMR) Spice output now sorts signal names in subcircuit headers (Bug #186).

IMP: (02/02/05, SMR) Waveform window now sorts signal names in the explorer part on the left (Bug #187).

IMP: (02/02/05, SMR) Status bar now shows both local coordinates and "hierarchical" coordinates
     (relative to an upper-level when the "Down Hierarchy" command has been used) (Bug #162).

IMP: (02/02/05, GVG) Second version of sweep algorithm for merging areas. GeometryHandler transformed into a abstract class.

BUG: (02/01/05, GVG) Covering implants not working with PolyQTree structure after
     code re-organization. Job was not started and it was not detecting correctly original geometries.

BUG: (02/01/05, SMR) Artwork solid arcs are drawn in outline form when made thick.
FIX: In "Artwork.java", change the solid arc to have type FILLED.

BUG: (02/01/05, SMR) Very tiny schematics may crash PostScript output.
FIX: In PostScript.psText(), quit if text descriptor is null.

BUG: (02/01/05, SMR) Numbers are displayed with too many digits (Bug #183)
FIX: In "TextUtils.makeUnits()", call "formatDouble" with 1 parameter to force 3 digits precision.

IMP: (02/01/05, SMR) Highlighting a port on an "example icon" shows the equivalent export in the cell (Bug #142).

IMP: (01/31/05, GVG) First version of sweep algorithm connected to ERC Well
